--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="web_back_exit_tip">click one more time to exit …</string>
     <string name="web_share_current_tip">sharing current web …</string>
     <string name="web_open_browser_tip">opening in browser …</string>
-    <string name="web_main_page_url">https://kompasim.github.io</string>
+    <string name="web_main_page_url">https://Atypicalim.github.io</string>
 </resources>
